--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -882,7 +882,7 @@
 }
 .tc-testimonials .testimonials-content .testimonials-slider .slide-card .main-text {
   font-size: 60px;
-  font-family: "Instrument Serif", serif;
+  font-family: "All Round Gothic W03 Book", sans-serif;
   font-weight: 500;
 }
 
@@ -985,7 +985,7 @@
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   font-size: 70px;
-  font-family: "Instrument Serif", serif;
+  font-family: "All Round Gothic W03 Book", sans-serif;
 }
 .tc-purchase .foot-img .rotate-box .rotate-text {
   -webkit-animation: rotateText 20s linear infinite;
@@ -1935,7 +1935,7 @@
 html[dir=rtl] body,
 html[lang=ar] body {
   direction: rtl;
-  font-family: "IBM Plex Sans Arabic", sans-serif;
+  font-family: "All Round Gothic W03 Book", sans-serif;
 }
 html[dir=rtl] body .h1,
 html[dir=rtl] body .h2,
@@ -1963,7 +1963,7 @@ html[lang=ar] body h4,
 html[lang=ar] body h5,
 html[lang=ar] body h6,
 html[lang=ar] body .sub-font {
-  font-family: "IBM Plex Sans Arabic", sans-serif;
+  font-family: "All Round Gothic W03 Book", sans-serif;
   line-height: 1.3;
 }
 html[dir=rtl] body .tc-sidemenu-st1 .white-line,
