--- a/public/assets/css/common_style.css
+++ b/public/assets/css/common_style.css
@@ -1680,7 +1680,7 @@ h6,
   font-weight: 400;
   margin: 0;
   line-height: 1.3;
-  color: #111;
+  color: #5F462E;
 }
 
 .container,
@@ -1693,10 +1693,6 @@ body a:focus {
   outline: 0;
 }
 
-a:hover {
-  color: inherit;
-  text-decoration: none;
-}
 
 body ul {
   list-style-type: none;
@@ -1731,7 +1727,7 @@ span,
 img,
 strong {
   display: inline-block;
-  color: #777;
+  color: #5F462E;
   text-decoration: none;
 }
 
@@ -1773,7 +1769,7 @@ i,
 
 .txt-stroke {
   color: transparent;
-  -webkit-text-stroke: 1px #111;
+  -webkit-text-stroke: 1px #5F462E;
 }
 
 .txt-stroke-wh {
@@ -2124,9 +2120,6 @@ small.text {
   margin: 0 20px;
   border-bottom: 3px solid transparent;
 }
-.side_menu .social_links a:hover {
-  border-color: #000;
-}
 .side_menu .contact-links {
   margin-top: 30px;
 }
@@ -2340,7 +2333,7 @@ small.text {
   font-size: 15px;
   font-weight: bold;
   text-transform: uppercase;
-  color: #111;
+  color: #5F462E;
   width: 50px;
   height: 60px;
 }
