feat: Update navbar link color and service items text color for improved aesthetics

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1619,7 +1619,7 @@
 }
 .tc-navbar-st1 .navbar-nav .nav-item .nav-link {
   position: relative;
-  color: #D9CCB8;
+  color: #bf8173;
   -webkit-margin-end: 30px;
           margin-inline-end: 30px;
   font-size: 1rem;
