feat: Update footer background color and text color for improved visibility

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3445,7 +3445,7 @@ html[lang=ar] body .tc-blog-st1 .blog-slider .swiper-wrapper .swiper-slide-prev 
 .tc-footer-st1 .foot {
   position: relative;
   padding: 30px 0;
-  background-color: #e8e8e8;
+  background-color: #5F462E;
 }
 .tc-footer-st1 .lines-st2 {
   position: absolute;
