--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1480,7 +1480,7 @@
   margin: 40px auto 0;
   background-color: #0008;
   border-radius: 100px;
-  padding: 10px 30px 10px 10px;
+  padding: 10px;
 }
 .tc-header-st1 .rotate-box {
   position: relative;
