--- a/public/assets/css/common_style.css
+++ b/public/assets/css/common_style.css
@@ -1947,7 +1947,7 @@ small.text {
   }
 }
 /* ====================== [ Start mouse-cursor ] ====================== */
-.swiper-wrapper.curs-scroll {
+/* .swiper-wrapper.curs-scroll {
   cursor: none;
 }
 
@@ -1995,9 +1995,9 @@ small.text {
   width: 40px;
   -webkit-box-shadow: rgba(255, 255, 255, 0) 0px 0px 0px 5px;
           box-shadow: rgba(255, 255, 255, 0) 0px 0px 0px 5px;
-}
+} */
 
-.cursor-outer.cursor-hover {
+/* .cursor-outer.cursor-hover {
   opacity: 1;
   margin-left: -30px;
   margin-top: -30px;
@@ -2005,7 +2005,7 @@ small.text {
   height: 60px;
   background-color: #086AD822 !important;
   opacity: 0.5 !important;
-}
+} */
 
 /* ====================== [ End mouse-cursor ] ====================== */
 /* --------------- side menu --------------- */
